# CAPIphonebook

./: CMakeLists.txt
cgen/commonapi-generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
cgen/commonapi-generator/configuration/org.eclipse.osgi/: framework.info.3
cgen/commonapi-generator/configuration/org.eclipse.osgi/.manager/: .fileTable.3  .fileTable.4
cgen/commonapi_dbus_generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
cgen/commonapi_dbus_generator/configuration/org.eclipse.osgi/: framework.info.3
cgen/commonapi_dbus_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.3  .fileTable.4
cgen/commonapi_someip_generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
cgen/commonapi_someip_generator/configuration/org.eclipse.osgi/: framework.info.2
cgen/commonapi_someip_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.2  .fileTable.3
fidl/: phonebook.fidl
src/: E04PhoneBookClient.cpp  E04PhoneBookStubImpl.cpp
src-gen/commonapi/examples/: E04PhoneBook.cpp  E04PhoneBook.hpp  E04PhoneBookDBusDeployment.cpp  E04PhoneBookDBusDeployment.hpp  E04PhoneBookDBusProxy.cpp  E04PhoneBookDBusProxy.hpp  E04PhoneBookDBusStubAdapter.cpp  E04PhoneBookDBusStubAdapter.hpp  E04PhoneBookProxy.hpp  E04PhoneBookProxyBase.hpp  E04PhoneBookStub.hpp  E04PhoneBookStubDefault.cpp  E04PhoneBookStubDefault.hpp
